# rbc

./: .gitignore  Cargo.toml  Makefile  popcount.aag
aag/: adder.aag
examples/: adder.aag  adder.sv  adder.truth  pass.aag  popcount.aag  popcount.aig
expression/: popcount1.exp  simple.exp
src/: aag.rs  aig.rs  bdd.rs  calculator1.lalrpop  de.rs  expr.rs  lib.rs  main.rs  qmc.rs
verilog/: Makefile  adder.aag  adder.aig  adder.pla  adder.sv  popcount.aag  popcount.aig  popcount.pla  popcount.sv
