[package]
name = "rbc"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
nom = "7.1.3"
lalrpop-util = { version = "0.20.0", features = ["lexer", "unicode"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }

[build-dependencies]
lalrpop = "0.20.0"

[lib]
name = "rbc"
crate-type = ["cdylib", "rlib"]
